<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_header" />


    <FrameLayout
        android:id="@+id/realtabcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/ll_tab_bottom" />

    <LinearLayout
        android:id="@+id/ll_tab_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#e1e1e1" />

        <LinearLayout
            android:id="@+id/tab_rg_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/clickableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/img_icon1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_tab_nearby" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/maintab_text_nearby"
                    android:textColor="#d0d0d0"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/clickableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/img_icon2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_tab_chat" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/maintab_text_message"
                    android:textColor="#d0d0d0"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/clickableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">


                <ImageView
                    android:id="@+id/img_icon3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_tab_profile" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/maintab_text_setting"
                    android:textColor="#d0d0d0"
                    android:textSize="12sp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


    <szu.wifichat.android.view.MyTabHost
        android:id="@+id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0" />
    </szu.wifichat.android.view.MyTabHost>


</RelativeLayout>